# ImageFormatConversion

./: CMakeLists.txt  README.md
data/: No.3006_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_6500.tif  No.3007_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_7500.tif  No.3008_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_8500.tif  No.3009_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_9500.tif  No.3011_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_11500.tif  No.3012_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_12500.tif  No.3015_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_15500.tif  No.3016_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_16500.tif  No.3017_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_17500.tif  No.3018_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_18500.tif  No.3019_GF2_PMS1_E109.8_N18.5_20151220_L1A0001256207-PAN1_REC_25500_19500.tif
example/: BlackImageFilterTest.cpp  CMakeLists.txt  ImageConversionTest.cpp
libTIFF/: CMakeLists.txt  tif_config.h  tiffconf.h
src/: CMakeLists.txt  ImageFormatConversion.cpp  ImageFormatConversion.h
